# tools

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE.rst  README.md  README.rst  circle.yml  default.json  lib.json  mypy.ini  personal.json  personal.json5  trustedpackages.json  trustedpackages.json5
.circleci/: config.yml
.github/: renovate.json  renovate.json5  settings.yml
.github/actions/docker-build/: action.yml
.github/workflows/: ci.yml  dependencies.yaml  docker-build-image.yml  nox-version-management.yml
12.04/: Makefile
15.10/: Dockerfile
16.04/: Makefile
16.10/: Makefile
autodecline-meetings/: .clasp.json  Code.gs  README.rst  appsscript.json
autodecline-meetings/lib/: meeting.gs  recurring.gs
cctui/: .gitignore  Cargo.toml  Makefile  README.rst
cctui/src/: main.rs  settings.rs
cctui/src/display/: app.rs  ui.rs
cctui/src/poll/: mod.rs  notifs.rs  repos.rs
cctui/src/util/: event.rs  mod.rs
circleci-orbs/: README.rst  linter.yml
circleci-orbs/deployment-notifier/: orb.yaml
circleci-orbs/docker/: orb.yaml
circleci-orbs/gcloud/: orb.yaml
circleci-orbs/linter/: orb.yaml
circleci-orbs/notifier/: orb.yaml
circleci-orbs/pytest/: orb.yaml
circleci-orbs/tester/: orb.yaml
ddtui/: README.rst  pyproject.toml
ddtui/ddtui/: app.py
docker-atc1441-exporter/: Dockerfile  README.rst  pyproject.toml
docker-atc1441-exporter/atc1441_exporter/: main.py  utils.py
docker-caddy-security/: Dockerfile  README.rst
docker-fava/: Dockerfile  README.rst
docker-gcloud-pubsub-emulator/: Dockerfile  LICENSE  README.rst  config.json  pubsubc.py  pyproject.toml  run  run.sh
docker-gcloud-pubsub-emulator/pubsubc/: go.mod  go.sum  main.go
docker-minify/: Dockerfile  README.rst
docker-mysqltuner/: Dockerfile  Makefile  README.md  README.rst
docker-mysqltuner/root/: mysqltuner.pl  vulnerabilities.csv
docker-nox/: Dockerfile  README.rst  nox  requirements.txt
docker-tuning-primer/: Dockerfile  README.md  README.rst
docker-tuning-primer/root/: tuning-primer-wrapper.sh  tuning-primer.sh
docker-tuning-primer/root/root/: .my.cnf
docker-ubuntu32/: Makefile  README.rst
docker-ubuntu32/10.04/: Makefile
docker-ubuntu32/14.04/: Makefile
docker-ubuntu32/14.10/: Makefile
docker-ubuntu32/15.04/: Makefile
docker-ubuntu32/15.10/: Makefile
docker-ubuntu32/17.04/: Makefile
libspacerep/: .gitignore  Makefile  README.rst  ffibuild.py  spacerep.nimble
libspacerep/src/: spacerep.nim
libspacerep/src/spacerep/: sm15.nim  sm2.nim
libspacerep/tests/: lib_test.py  requirements.txt  run.py  test_lib.c  test_lib.nim  test_lib.py
poe/: .gitignore  Dockerfile  README.rst  fetch.py  mix.exs
poe/assets/: package-lock.json  package.json
poe/assets/css/: app.css  app.scss  phoenix.css
poe/assets/js/: app.js
poe/assets/static/images/: poe.jpg:Zone.Identifier
poe/config/: config.exs  dev.exs  prod.exs  prod.secret.exs  releases.exs  test.exs
poe/lib/: poe.ex  poe_web.ex
poe/lib/poe/: api.ex  application.ex  cache.ex  currency.ex  maps.ex  market.ex  pantheon.ex  strongboxes.ex
poe/lib/poe/api/: ninja.ex  wiki.ex
poe/lib/poe_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex
poe/lib/poe_web/channels/: user_socket.ex
poe/lib/poe_web/controllers/: home_controller.ex  maps_controller.ex  page_controller.ex  pantheon_controller.ex  strongboxes_controller.ex
poe/lib/poe_web/templates/layout/: app.html.eex  app.html.heex
poe/lib/poe_web/templates/maps/: index.html.eex  index.html.heex
poe/lib/poe_web/templates/page/: index.html.eex
poe/lib/poe_web/templates/pantheon/: index.html.eex
poe/lib/poe_web/templates/strongboxes/: index.html.eex
poe/lib/poe_web/views/: error_helpers.ex  error_view.ex  home_view.ex  layout_view.ex  maps_view.ex  page_view.ex  pantheon_view.ex  strongboxes_view.ex
poe/test/poe_web/controllers/: page_controller_test.exs
poe/test/poe_web/views/: error_view_test.exs  layout_view_test.exs  page_view_test.exs
poe/test/support/: channel_case.ex  conn_case.ex
ports/: README.rst
ports/perl/p5-lwp-useragent-cached/: Portfile
ports/perl/p5-www-youtubeviewer/: Portfile
ports/sysutils/skhd/: Portfile
ports/sysutils/yabai/: Portfile
ports/sysutils/yabai/files/: org.macports.yabai.plist.in
renovate/: README.rst  automerge.json5  custom.json5  deprecated.json5  gcf.json5  groups.json5  personal.json5  pins.json5  semantic-commits.json5  version-as-app.json5  version-as-lib.json5  version-file-as-app.json5  version-file-as-lib.json5  versioning.json5
root/: tuning-primer-wrapper.sh  tuning-primer.sh
slack-notifier/: README.rst  send-deploy-notif.sh
task/: pyproject.toml  task.nimble
task/src/: task.nim  task.nims
task/src/task/: cmd.nim  config.nim  filter.nim  types.nim
task/task/: cli.py  cmd.py  command.py  files.py  schema.py
userstyles/: circleci-gruvbox-dark.user.css  dialpad-gruvbox-dark.user.css  dialpad-meetings-gruvbox-dark-modern.user.css
