[package]
name = "cctui"
version = "1.2.0"
authors = ["Kevin James <KevinJames@thekev.in>"]
edition = "2018"

description = "CCTray TUI, a build monitoring dashboard for your terminal"
readme = "README.md"
repository = "https://github.com/TheKevJames/tools/tree/master/cctui"
license = "MIT"
keywords = ["cctray", "ci", "tui"]

[badges]
circle-ci = { repository = "TheKevJames/tools", branch = "master" }
maintenance = { status = "actively-developed" }

[dependencies]
chrono = "=0.4.43"
config = { version = "=0.15.19", features = ["yaml"] }
crossterm = "=0.28.1"
fern = "=0.7.1"
log = "=0.4.29"
ratatui = "=0.30.0"
reqwest = { version = "=0.13.1", features = ["blocking", "json"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde-xml-rs = "=0.8.2"
serde_json = "=1.0.149"
xdg = "=3.0.0"
