[project]
name = "atc1441-exporter"
version = "0.1.0"
description = "ATC1441 (passive) Sensor data OpenMetrics Exporter"
requires-python = ">=3.9,<4.0"
license = {text = "MIT"}

authors = [
    {name = "Kevin James",email = "KevinJames@thekev.in"}
]

dependencies = [
    "pybluez (==0.23)",
    "prometheus-client (==0.21.1)",
]

[project.urls]
repository = "https://github.com/TheKevJames/tools"

[tool.poetry]
requires-poetry = ">=2.0"
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
